[tool.poetry]
name = "dict-typer"
version = "0.1.15"
description = "A simple library to take data and turn it into python typing definitions."
authors = ["Axel <dict.typer@absalon.is>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ikornaselur/dict-typer"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.0"
flake8-bugbear = "^23.0.0"
flake8-builtins = "^2.0.0"
flake8-comprehensions = "^3.10.0"
flake8-isort = "^6.0.0"
ipdb = "^0.13.0"
isort = "^5.0.0"
mypy = "^1.0.0"
pytest = "^8.0.0"
snapshottest = "^0.6.0"

[tool.poetry.scripts]
dict-typer = 'dict_typer:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
